Fixed Z-Index

--- a/style.css
+++ b/style.css
@@ -119,7 +119,7 @@ header {
 
   position: sticky;
   top: 0px;
-
+  z-index: 2;
 
 
 
